Now returning IActionResult in controllers

--- a/src/FatFoodie.Application/project.json
+++ b/src/FatFoodie.Application/project.json
@@ -17,7 +17,8 @@
       }
     }
   },
-  "dependencies": {
-    "FatFoodie.Contracts": "1.0.0-*"
-  }
+    "dependencies": {
+        "FatFoodie.Contracts": "1.0.0-*",
+        "NUnit": "3.4.1",
+    }
 }
