added acceptance test and work on infrastructure

--- a/src/FatFoodie.WebApi/Properties/launchSettings.json
+++ b/src/FatFoodie.WebApi/Properties/launchSettings.json
@@ -11,15 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "FatFoodie.WebApi": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "http://localhost:5000/api/values",
+      "launchUrl": "api/recipe",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
