--- a/FatFoodie.AcceptanceTests/packages.config
+++ b/FatFoodie.AcceptanceTests/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NUnit" version="3.5.0" targetFramework="net462" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net462" />
+  <package id="Should" version="1.1.20" targetFramework="net462" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net462" />
 </packages>
