--- a/src/FatFoodie.Contracts/FatFoodie.Contracts.csproj
+++ b/src/FatFoodie.Contracts/FatFoodie.Contracts.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorModel.cs" />
+    <Compile Include="Exceptions\DatabaseUnavailableException.cs" />
     <Compile Include="HealthCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recipe.cs" />
