--- a/src/FatFoodie.WebApi/project.json
+++ b/src/FatFoodie.WebApi/project.json
@@ -1,5 +1,7 @@
 {
     "dependencies": {
+        "Castle.Windsor": "3.3.0",
+        "Microsoft.AspNetCore.Diagnostics": "1.0.0",
         "Microsoft.AspNetCore.Mvc": "1.0.0",
         "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
         "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
