--- a/src/FatFoodie.Domain/FatFoodie.Domain.csproj
+++ b/src/FatFoodie.Domain/FatFoodie.Domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9CB3C5D9-6927-4425-9F49-E076EE01F19F}</ProjectGuid>
+    <ProjectGuid>{CE03E715-000F-48EC-A51E-C58322948388}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FatFoodie.UnitTests</RootNamespace>
-    <AssemblyName>FatFoodie.UnitTests</AssemblyName>
+    <RootNamespace>FatFoodie.Domain</RootNamespace>
+    <AssemblyName>FatFoodie.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.4.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,25 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Recipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Application\Recipe\RecipeServiceTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\FatFoodie.DataAccess\FatFoodie.DataAccess.csproj">
-      <Project>{fafb0246-16a4-49ff-954e-4967c2074c49}</Project>
-      <Name>FatFoodie.DataAccess</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\FatFoodie.Application\FatFoodie.Application.csproj">
-      <Project>{6f6a003d-cfce-4663-ad57-f711a1bb103d}</Project>
-      <Name>FatFoodie.Application</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\FatFoodie.Contracts\FatFoodie.Contracts.csproj">
-      <Project>{8c556dac-1d97-4f48-b67c-597817f20947}</Project>
-      <Name>FatFoodie.Contracts</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
