--- a/FatFoodie.DataAccess/FatFoodie.DataAccess.csproj
+++ b/FatFoodie.DataAccess/FatFoodie.DataAccess.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
       <Private>True</Private>
@@ -46,6 +50,8 @@
   <ItemGroup>
     <Compile Include="InMemoryRecipeRepository.cs" />
     <Compile Include="IRecipeRepository.cs" />
+    <Compile Include="Pocos\Mapping\PocoToDomainProfile.cs" />
+    <Compile Include="Pocos\RecipePoco.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlRecipeRepository.cs" />
   </ItemGroup>
