--- a/src/FatFoodie.WebApi/project.fragment.lock.json
+++ b/src/FatFoodie.WebApi/project.fragment.lock.json
@@ -34,6 +34,62 @@
           "copyToOutput": true
         }
       }
+    },
+    "FatFoodie.Infrastructure/1.0.0": {
+      "type": "project",
+      "framework": ".NETFramework,Version=v4.6.2",
+      "compile": {
+        "bin/Debug/FatFoodie.Infrastructure.dll": {}
+      },
+      "runtime": {
+        "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
+        "../../packages/Castle.Core.3.3.0/lib/net45/Castle.Core.dll": {},
+        "../../packages/Castle.Windsor.3.3.0/lib/net45/Castle.Windsor.dll": {},
+        "bin/Debug/FatFoodie.Infrastructure.dll": {}
+      },
+      "contentFiles": {
+        "bin/Debug/FatFoodie.Infrastructure.pdb": {
+          "buildAction": "None",
+          "codeLanguage": "any",
+          "copyToOutput": true
+        }
+      }
+    },
+    "FatFoodie.DataAccess/1.0.0": {
+      "type": "project",
+      "framework": ".NETFramework,Version=v4.6.2",
+      "compile": {
+        "bin/Debug/FatFoodie.DataAccess.dll": {}
+      },
+      "runtime": {
+        "../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
+        "../packages/Dapper.1.50.2/lib/net451/Dapper.dll": {},
+        "bin/Debug/FatFoodie.DataAccess.dll": {}
+      },
+      "contentFiles": {
+        "bin/Debug/FatFoodie.DataAccess.pdb": {
+          "buildAction": "None",
+          "codeLanguage": "any",
+          "copyToOutput": true
+        }
+      }
+    },
+    "FatFoodie.Domain/1.0.0": {
+      "type": "project",
+      "framework": ".NETFramework,Version=v4.6.2",
+      "compile": {
+        "bin/Debug/FatFoodie.Domain.dll": {}
+      },
+      "runtime": {
+        "bin/Debug/FatFoodie.Domain.dll": {}
+      },
+      "contentFiles": {
+        "bin/Debug/FatFoodie.Domain.pdb": {
+          "buildAction": "None",
+          "codeLanguage": "any",
+          "copyToOutput": true
+        }
+      }
     }
   }
 }
