--- a/src/FatFoodie.WebApi/project.json
+++ b/src/FatFoodie.WebApi/project.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "Castle.Windsor": "3.3.0",
+        "Castle.Windsor.MsDependencyInjection": "1.3.0",
         "Microsoft.AspNetCore.Diagnostics": "1.0.0",
         "Microsoft.AspNetCore.Mvc": "1.0.0",
         "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
@@ -25,6 +26,9 @@
                     "target": "project"
                 },
                 "FatFoodie.Contracts": {
+                    "target": "project"
+                },
+                "FatFoodie.Infrastructure": {
                     "target": "project"
                 }
             }
