--- a/tests/FatFoodie.UnitTests/FatFoodie.UnitTests.csproj
+++ b/tests/FatFoodie.UnitTests/FatFoodie.UnitTests.csproj
@@ -48,10 +48,6 @@
     <Compile Include="Application\Recipe\RecipeServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\FatFoodie.DataAccess\FatFoodie.DataAccess.csproj">
-      <Project>{fafb0246-16a4-49ff-954e-4967c2074c49}</Project>
-      <Name>FatFoodie.DataAccess</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\src\FatFoodie.Application\FatFoodie.Application.csproj">
       <Project>{6f6a003d-cfce-4663-ad57-f711a1bb103d}</Project>
       <Name>FatFoodie.Application</Name>
@@ -59,6 +55,10 @@
     <ProjectReference Include="..\..\src\FatFoodie.Contracts\FatFoodie.Contracts.csproj">
       <Project>{8c556dac-1d97-4f48-b67c-597817f20947}</Project>
       <Name>FatFoodie.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\FatFoodie.DataAccess\FatFoodie.DataAccess.csproj">
+      <Project>{fafb0246-16a4-49ff-954e-4967c2074c49}</Project>
+      <Name>FatFoodie.DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
