--- a/src/FatFoodie.WebApi/appsettings.json
+++ b/src/FatFoodie.WebApi/appsettings.json
@@ -1,10 +1,13 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
+    "ConnectionStrings": {
+        "Recipe": "Data Source=.\\sqlenterprise;Initial Catalog=FatFoodie;Integrated Security=True"
     }
-  }
 }
