--- a/src/FatFoodie.WebApi/project.json
+++ b/src/FatFoodie.WebApi/project.json
@@ -2,17 +2,17 @@
     "dependencies": {
         "Castle.Windsor": "3.3.0",
         "Castle.Windsor.MsDependencyInjection": "1.3.0",
-        "Microsoft.AspNetCore.Diagnostics": "1.0.0",
-        "Microsoft.AspNetCore.Mvc": "1.0.0",
-        "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
-        "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
-        "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
-        "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
-        "Microsoft.Extensions.Configuration.Json": "1.0.0",
-        "Microsoft.Extensions.Logging": "1.0.0",
-        "Microsoft.Extensions.Logging.Console": "1.0.0",
-        "Microsoft.Extensions.Logging.Debug": "1.0.0",
-        "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+        "Microsoft.AspNetCore.Diagnostics": "1.1.0",
+        "Microsoft.AspNetCore.Mvc": "1.1.0",
+        "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+        "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+        "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
+        "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
+        "Microsoft.Extensions.Configuration.Json": "1.1.0",
+        "Microsoft.Extensions.Logging": "1.1.0",
+        "Microsoft.Extensions.Logging.Console": "1.1.0",
+        "Microsoft.Extensions.Logging.Debug": "1.1.0",
+        "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
         "Swashbuckle": "6.0.0-beta901"
     },
     "tools": {
@@ -25,10 +25,13 @@
                 "FatFoodie.Application": {
                     "target": "project"
                 },
+                "FatFoodie.Configuration": {
+                    "target": "project"
+                },
                 "FatFoodie.Contracts": {
                     "target": "project"
                 },
-                "FatFoodie.Infrastructure": {
+                "FatFoodie.IoC": {
                     "target": "project"
                 }
             }
