--- a/src/FatFoodie.WebApi/project.json
+++ b/src/FatFoodie.WebApi/project.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "AutoMapper": "5.2.0",
         "Castle.Windsor": "3.3.0",
         "Castle.Windsor.MsDependencyInjection": "1.3.0",
         "Microsoft.AspNetCore.Diagnostics": "1.1.0",
