--- a/src/FatFoodie.WebApi/project.json
+++ b/src/FatFoodie.WebApi/project.json
@@ -32,6 +32,9 @@
                 "FatFoodie.Contracts": {
                     "target": "project"
                 },
+                "FatFoodie.Domain": {
+                    "target": "project"
+                },
                 "FatFoodie.IoC": {
                     "target": "project"
                 }
