--- a/src/FatFoodie.Infrastructure/FatFoodie.Infrastructure.csproj
+++ b/src/FatFoodie.Infrastructure/FatFoodie.Infrastructure.csproj
@@ -53,12 +53,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IInfrastructureRegistrationMarker.cs" />
+    <Compile Include="Mapping\DomainToContractProfile.cs" />
+    <Compile Include="Mapping\PocoToDomainProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FatFoodie.Application\FatFoodie.Application.csproj">
       <Project>{6f6a003d-cfce-4663-ad57-f711a1bb103d}</Project>
       <Name>FatFoodie.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FatFoodie.Contracts\FatFoodie.Contracts.csproj">
+      <Project>{8c556dac-1d97-4f48-b67c-597817f20947}</Project>
+      <Name>FatFoodie.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FatFoodie.DataAccess\FatFoodie.DataAccess.csproj">
+      <Project>{fafb0246-16a4-49ff-954e-4967c2074c49}</Project>
+      <Name>FatFoodie.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FatFoodie.Domain\FatFoodie.Domain.csproj">
+      <Project>{ce03e715-000f-48ec-a51e-c58322948388}</Project>
+      <Name>FatFoodie.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
