--- a/tests/FatFoodie.IntegrationTests/packages.config
+++ b/tests/FatFoodie.IntegrationTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="5.2.0" targetFramework="net462" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net462" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net462" />
   <package id="NUnit" version="3.5.0" targetFramework="net462" />
